styles.css
.bold-text{
  font-weight: bold;
}
.big-text{
  font-size: 125%;
}

body{
  margin-left: 8%;
  margin-right: 8%;
}
/* @media screen and (min-width : 720px) {
  body{
    margin-left: 0%;
    margin-right: 0%;
  }
} */
.horizontal-box{
  display: flex;
  flex-direction: row;
}
.right-aligned{
  justify-content: flex-end;
}
.vertical-box{
  display: flex;
  flex-direction: column;
}
#logo-region{
  width: 50%;
}
#page-selection{
  margin-left: 30%;
}

nav .page-selection-btn{ 
  border: 5px hidden;
  padding-top: 10%;
  background-color: white;
  color : #08050527;
}
nav .page-selection-btn:active,
nav .page-selection-btn:hover {
  border-top: 2px solid blue;
  color: blue;
}

.input-field:focus {
  border: 2px solid dodgerblue;
}
.input-field {
  width: 20%;
  padding: 10px;
  outline: none;
}

.icon {
  padding: 10px;
  padding-left: 5px;
  padding-right: 2px;
  background: #F2F2F2;
  color: black;
  min-width: 40px;
  text-align: center;
  border-top-left-radius   : 15px;
  border-bottom-left-radius: 15px
}

#sub-title{
  margin-bottom:0;
}

.under-title{
  margin-top : 0; 
  padding-top:5px;
  font-size: 90%;
  color: gray;
}

#submit-btn{
  background-color: rgb(0, 110, 255); 
  color: white; 
  padding: 10px 24px;
  border : none; 
  border-top-right-radius   : 15px;
  border-bottom-right-radius: 15px
}

header, body, footer, .page-selection-btn {
    font-family: 'Raleway';
}

.spacing-div{
  margin-top: 20px;
}

.filter-container{
  display: flex;
  border: 1px solid;
  border-radius: 30px;
  margin-left: 20px;
  padding-right:2px;
  margin-top : 10px;
}

.filter-container:hover {
  border-top: 1px solid blue;
  color: blue;
}
.flex-wrap{
  flex-wrap: wrap
}

.filter-icon{
  border-radius: 30px;
  color: blue;
  background: lightblue;
  margin-right: 2.5px;
}

.circled{ 
  /* border-radius: 50%; */
  padding: 20px;
}
.middled{
  text-align: center;
  vertical-align: middle;
}
.aligned{
  text-align: center;
}
.align-self-bottom{
  align-self: flex-end;
}
.paddled{
  padding-left: 10px;
  padding-right: 10px;
}
.paddled-top{
  padding-top: 10px;
}


.flex-wrap-margined-top{
  margin-top: 10px;
}
/* .row-gap{
  row-gap:20px
} */
#margined-top{    
  margin-top: 25px;
}

#hosts-container{
  width: 66%;
  border-radius:   30px;
}

#most-popular-container{
  width: 33%;
  height : auto;
  border-radius: 30px;
}
.fit-most-popular-container{
  margin-top: 1%;
  margin-left: 1%;
  border-radius: 5px 0px 0px 5px;
  width: 50%;
  height: 142px;
}

.all-paddled{
  padding: 20px;
}
.gray-background{
  background-color: #F2F2F2;
} 
.row-gapped{
  row-gap: 20px;
}
.column-gapped{
  column-gap: 20px;
}
.side-margined{
  margin-left: 8%;
  margin-right: 8%;
}
.margined-left{
  margin-left: 3%;
}
.side-paddled{
  padding-left: 20px;
  padding-right: 20px;
}
.center-aligned{ /*ne fonctionne pas*/
  display: flex;
  align-self: center;
}
.right-aligned{
  justify-content: flex-end;
}
.space-between{
  justify-content: space-evenly;
}
.space-between-fix{
  height: 70px ;
}

.rating-margin-top{ /*fix*/
  margin-top: 45%;
}

.host-card{ 
  padding : 10px;
  padding-bottom: 1px;
  width: 28%; 
  height: 200px ;
  background-color: white;
  border-radius: 30px;
}

.star-icon{
  color: blue;
}
.most-popular-card{
  width: auto;
  height: 150px ;
  background-color: white;
  border-radius: 5px 0px 0px 5px;
}

.inner-activities-container{
  width: 25%;
  height: 400px ;
}
.big-activity-card{
  box-shadow: -2px -3px 10px  gray;    
  width: 22%; 
  height: auto ;
  border-radius: 30px;
}
.medium-activity-card{
  box-shadow: -2px -3px 10px  gray;
  width: auto; 
  height: 54% ;
  border-radius: 30px;
}
.small-activity-card{
  box-shadow: -2px -3px 10px    gray;
  width: auto; 
  height: 41% ;
  border-radius: 30px;
}

.fit-container{    /*fix*/
  margin-top: -6px ;
  margin-left: -6px;
  width: 106%;
  max-height: 60%;
  border-radius : 30px ;
}

.actitity-card-fit-container{
  width: 100%;
  height:80%;
  border-radius : 20px 20px 0 0  ; 
}
.big-actitity-height{
  height: 92%;
}

.medium-actitity-height{
  height: 85%;
}

.small-actitity-height{
  height: 80%;
}


#footer-container{
  margin-left: 15%;
}

.footer-about{
  width: 25%;
  height: 200px;
  background-color: #F2F2F2;
}
.footer-our-hosts{
  width: 25%;
  height: 200px;
  background-color: #F2F2F2;
}
.footer-help{
  width: 25%;
  height:  200px;
  background-color: #F2F2F2;  
}
#footer-container{
  margin: 0 -9.5%;
}
#footer-spacing-div{
  margin-top: 5%;
}

